--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -136,7 +136,7 @@
                     <td style="padding:0 125px 0 15px;">
                       <div class="modle fn-left">
                         <h3>
-                          关于边际
+                          关于『状元到家』
                           <div class="line">
                             <em></em>
                             <i></i>
