--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -144,7 +144,7 @@
                         </h3>
                         <div class="list fn-clear">
                           <ul>
-                            <li><a target="_blank" href="http://www.yousi.com/instructions/news/id/13/n/23">了解状元到家</a></li><li><a target="_blank" href="http://www.yousi.com/instructions/news/id/13/n/30">加入我们</a></li><li><a target="_blank" href="http://www.yousi.com/instructions/news/id/13/n/25">联系我们</a></li><li><a target="_blank" href="http://www.yousi.com/instructions/news/id/13/n/27">免责声明</a></li>                </ul>
+                            <li><a target="_blank" href="{% url 'about' %}">了解状元到家</a></li><li><a target="_blank" href="http://www.yousi.com/instructions/news/id/13/n/30">加入我们</a></li><li><a target="_blank" href="http://www.yousi.com/instructions/news/id/13/n/25">联系我们</a></li><li><a target="_blank" href="http://www.yousi.com/instructions/news/id/13/n/27">免责声明</a></li>                </ul>
                         </div>
                       </div>
                     </td>
